objects/Log_Integracao__c.object
<CustomObject>
    <fields>
        <fullName>Data_e_hora_de_inicio__c</fullName>
        <description>Hora de início da integração</description>
        <label>Data e hora de início</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_e_hora_fim_integracao__c</fullName>
        <description>Data e hora do fim da integração</description>
        <label>Data e hora fim integração</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descricao__c</fullName>
        <label>Descrição</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nome_integracao__c</fullName>
        <externalId>true</externalId>
        <label>Nome integração</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_da_integracao__c</fullName>
        <description>Status da integração executada</description>
        <label>Status da integração</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Em processo</fullName>
                </value>
                <value>
                    <fullName>Processada com erro</fullName>
                </value>
                <value>
                    <fullName>Processada com sucesso</fullName>
                </value>
                <value>
                    <fullName>Abortada</fullName>
                </value>
                <value>
                    <fullName>TW1_CallBackConcluido</fullName>
                    <label>Callback Concluído</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log Integração</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Nome_integracao__c</columns>
        <columns>Status_da_integracao__c</columns>
        <columns>Data_e_hora_de_inicio__c</columns>
        <columns>Data_e_hora_fim_integracao__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{YYYY}{MM}-{0}</displayFormat>
        <label>Nome de Log Integração</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de Integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>